--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4976,6 +4976,7 @@ hr {
 /* line 12, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_services_section.scss */
 .categories-area .single-cat .cat-icon img {
     margin-bottom: 30px;
+    margin-top: 30px;
     display: block;
 }
 
