--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3706,7 +3706,7 @@ hr {
 /* line 37, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_h1-hero.scss */
 .slider-area {
     margin-top: -1px;
-    background-image: url(../img/hero/h1_hero.png);
+    background-image: url(../img/hero/h1_hero.webp);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
